kubernetes/vaultwarden/manifest/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vaultwarden
  namespace: my-vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
     app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vaultwarden-storage
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: vaultwarden-storage
          persistentVolumeClaim:
            claimName: vaultwarden-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden-svc
  namespace: my-vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
