kubernetes/vaultwarden/manifest/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vaultwarden-ingress
  namespace: my-vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: vaultwarden.local.127.0.0.1.sslip.io
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: vaultwarden-svc
         port:
          number: 80
  tls: []
